--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "datatables.net": "^1.10.16",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jvectormap": "^2.0.4",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
