--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "datatables.net": "^1.10.16",
+    "element-ui": "^2.2.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jvectormap": "^2.0.4",
